Se oculto el boton de comprar cuando el carrito esta vacio

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,10 @@ td p {
     display: none;
 }
 
+#btnTotal.oculto {
+    display: none;
+}
+
 .carritoModalOverlay {
     position: fixed;
     width: 100vw;
