--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,8 @@ td p {
 
 #total {
     text-align: center;
+    font-size: 2rem;
+    margin: 1rem;
 }
 
 .centrado {
@@ -150,6 +152,10 @@ td p {
     display: none;
 }
 
+#btnVaciarCarrito {
+    margin-left: 25px;
+}
+
 #btnVaciarCarrito.oculto {
     display: none;
 }
@@ -158,17 +164,17 @@ td p {
     position: fixed;
     width: 100vw;
     height: 100%;
-    z-index: 1;
+    z-index: 10;
     transform: translateX(100%);
     transition: .7s ease-out;
 }
 
 .carritoModalOverlay.mostrar {
-    transform: translateX(0%);
+    transform: translateX(-0.9%);
 }
 
 .carritoModal {
-    height: 100vh;
+    height: 86.3vh;
     width: 50%;
     background-color: rgb(231, 230, 230);
     float: right;
